<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- General data -->
    <string name="app_name">EcoAR</string>
    <string name="webservice_name">EcoAr</string>
    
    <!-- URL preferences -->
    <string name="webservice">http://192.168.15.7:8080</string><!-- Al final del hipervinculo NO DEBE LLEVAR '/'-->
    
    <string name="webservice_session_get">/csession/</string><!-- Main -->
    <string name="webservice_userdata_get">/session/</string><!-- Home -->
    <string name="webservice_singup_post">/signup/</string><!-- SingUp -->
    <string name="webservice_login_post">/login/</string><!-- Login -->
    <string name="webservice_logout_delete">/logout/</string><!-- Logout -->
    
    <string name="webservice_searchcam_post">/searchcam/</string><!-- SearchCamera -->
    
     <!-- URL preferences - ProductInfo -->
    <string name="webservice_product_info_get">/products/info/</string> 
    <string name="webservice_product_info_post">/products/info/</string>
    <string name="webservice_product_commentaries_get">/products/commentaries/</string>
    <string name="webservice_product_commentaries_post">/products/commentaries/</string>
    <string name="webservice_product_commentaries_delete">/products/commentaries/delete/</string>

     <!-- URL preferences - BrandInfo -->
    <string name="webservice_brand_info_get">/brands/info/</string> 
    <string name="webservice_brand_info_post">/brands/info/</string>
    <string name="webservice_brand_commentaries_get">/brands/commentaries/</string>
    <string name="webservice_brand_commentaries_post">/brands/commentaries/</string>
    <string name="webservice_brand_commentaries_delete">/brands/commentaries/delete/</string>

    
    <!-- URL Preferences parsers -->
    <string name="amazonurl">http://www.amazon.com/s/</string>
    <string name="webservice_search_barcode">/logout/</string>
    <string name="webservice_search_query">/logout/</string>
    
    <!-- SharedPreferences userdata -->
    <string name="userdata_filename">userdata</string>
    
    <!-- SharedPreferences session -->
    <string name="session_filename">session_prefs</string>
    <string name="session_status_keyword">sessionAuthenticated</string>
    
    <!-- SharedPreferences CSRF -->
    <string name="csrf_filename">csrf_prefs</string>
    <string name="csrf_csrftoken_keyword">csrftoken</string>
    
    <!-- ActionBar -->
    <string name="actionbar_home">Inicio</string>
	<string name="actionbar_login">Iniciar sesión</string>
	<string name="actionbar_logout">Cerrar sesión</string>
    <string name="actionbar_search">Buscar</string>
    <string name="actionbar_searchcamera">Buscar (cámara)</string>
    <string name="actionbar_groceries">Lista del super</string>    
    
    <!-- Home -->
    <string name="home_wellcome_title">Bienvenido </string>
    <string name="home_wellcome_intro">Este es un sistema de bla para bla, para empezar a usarlo haz bla.</string>
    
    <!-- Home.LastProducts -->
    <string name="lastproducts_title">Productos recientemente vistos</string>
    <string name="lastproducts_item_defaultname">Nombre del producto</string>
    <string name="lastproducts_item_defaultdescription">Descripción</string>
    
    <!-- Login -->
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
   	<string name="login_send">Enviar</string>
    <string name="login_singuptext"><a href="" >Registrarse</a></string>
    <string name="login_singupurl">http://www.example.com</string>
    <string name="login_recoverpasstext"><a href="">Recuperar contraseña</a></string>
    <string name="login_recoverpassurl">http://www.example.com</string>
    <string name="loginintro_skiplogin">Saltar</string>
    
    <!-- Login login errors -->
    <string name="login_errorsdefault">El nombre de usuario o la contraseña no son validos.</string>
    <string name="login_error_username">Usuario: </string>
    <string name="login_error_password">Contraseña: </string>
    
    <!-- SearchBar -->
	<string name="searchbar_sendbutton">Buscar</string>
    <string name="searchbar_results_item_name">Nombre del producto</string>
    <string name="searchbar_results_item_description"></string>
    <string name="searchproduct_searchtextbar_hint">Buscar producto&#8230;</string>
    
    <!-- Groceries -->
    <string name="groceries_title">Lista del super</string>
    <string name="groceries_list_keepsearching">Buscar</string>
	<string name="groceries_list_clear">Limpiar lista</string>
	<string name="groceries_list_item_defaultname"> Ejemplo de nombre de producto</string>
    
    <!-- ProductInfo -->
    <string name="productinfo_title">Producto</string>
    
    <string name="productinfo_userrating_title">Calificación de usuarios</string>
    <string name="productinfo_userrating_rating">0.0</string>
    <string name="productinfo_userrating_titleuser">Tu calificación</string>
    <string name="productinfo_userrating_ratinguser">0/5</string>
    <string name="productinfo_userrating_not_session">Inicia sesión para calificar</string>
    
    <string name="productinfo_basicinfo_name">Nombre del producto</string>
    <string name="productinfo_basicinfo_description"></string>
	<string name="productinfo_basicinfo_shopingservice">Servicio</string>
	<string name="productinfo_basicinfo_dash">-</string>
	<string name="productinfo_basicinfo_referenceurl">hipervínculo</string>

	<string name="productinfo_commentaries_item_username">Usuario</string>
	<string name="productinfo_commentaries_item_dash">-</string>
	<string name="productinfo_commentaries_item_postingdate">24/abril/2009, 23:30</string>
	<string name="productinfo_commentaries_item_body"></string>
	
	<string name="productinfo_commentaries_item_delete">X</string>
	<string name="productinfo_commentaries_item_delete_message">¿Seguro que quieres eliminar este comentario?</string>
	<string name="productinfo_commentaries_item_delete_positive">Eliminar</string>
	<string name="productinfo_commentaries_item_delete_negative">Cancelar</string>

	<string name="productinfo_commentarieslist_title">Comentarios</string>
	<string name="productinfo_commentarieslist_post_hint">Escribe un comentario</string>
	<string name="productinfo_commentarieslist_send">Publicar</string>
	<string name="productinfo_commentarieslist_not_session_edittext">Inicia sesión para comentar&#8230;</string>
	
	<string name="productinfo_commentarieslist_preface_more">Ver más comentarios&#8230;</string>
	
	<string name="productinfo_ecologicalscore_title">Calificación ambiental</string>
	<string name="productinfo_ecologicalscore_subtitle">Escala del 1 al 10</string>
	<string name="productinfo_ecologicalscore_defaultscore">0.0</string>
	<string name="productinfo_ecologicalscore_criterions_title">Criterios de análisis </string>
	<string name="productinfo_ecologicalscore_transport">Gastos de transportación</string>
	<string name="productinfo_ecologicalscore_energy">Ahorro de energía</string>
	<string name="productinfo_ecologicalscore_water">Ahorro de agua</string>
	<string name="productinfo_ecologicalscore_society">Ayuda en la sociedad</string>
	<string name="productinfo_ecologicalscore_recyclable">Es un producto recicable</string>
	
	<!-- BrandInfo -->
	<string name="brandinfo_title">Marca</string>

	
	<!-- LastProducts -->
	<string name="lastproducts_itemname"></string>
	
	<!-- SearchCamera -->
	<string name="searchcamera_send">Capturar</string>
	
	<string name="searchcamera_product_not_found_title">Producto No encontrado</string>
    <string name="searchcamera_product_not_found_message">Ningun producto fue encontrado en la imagen.</string>
	
	<!-- SlideMenu -->
	<string name="slidemenu_item_name">Item name</string>	
	
	<!-- SingUp -->
	<string name="singup_title">Registro</string>
	<string name="signup_username">Nombre de usuario</string>
	<string name="signup_password">Contraseña</string>
	<string name="signup_password_confirmation">Confirmar contraseña</string>
	<string name="signup_first_name">Nombre</string>
	<string name="signup_last_name">Apellido(s)</string>
	<string name="signup_email">Correo</string>
	<string name="signup_gender">Sexo:</string>
	<string name="signup_gender_male">Masculino</string>
	<string name="signup_gender_female">Femenino</string>
	<string name="signup_birthday">Fecha de nacimiento:</string>
	<string name="signup_send_success">El usuario ha sido registrado con éxito</string>
	<string name="signup_send_button">Enviar</string>
	
	<string name="signup_username_error">Nombre de usuario:</string>
	<string name="signup_password_error">Contraseña:</string>
	<string name="signup_password_confirmation_error">Confirmar contraseña:</string>
	<string name="signup_first_name_error">Nombre:</string>
	<string name="signup_last_name_error">Apellido(s):</string>
	<string name="signup_email_error">Correo:</string>
	<string name="signup_gender_error">Sexo:</string>
	<string name="signup_birthday_error">Fecha de nacimiento:</string>
	
	<!-- Error Messages -->
	<string name="error_afirmative_button">OK</string>
	
	<string name="error_no_internet_service_title">Error del servicio de internet</string>
	<string name="error_no_internet_service_message">Se necesita una conexión a internet para utilizar este servicio.</string>
	
	<string name="error_sending_http_request_title">Error de conexión</string>
	<string name="error_sending_http_request_message">Se ha producido un error al conectar con el servidor.</string>
		
	<string name="error_retrieving_json_data_title">Error del servidor</string>
	<string name="error_retrieving_json_data_message">Se ha producido un error recuperando los datos del servidor.</string>

	<string name="error_retrieving_data_title">Error del servidor</string>
	<string name="error_retrieving_data_message">Se ha producido un error recuperando los datos del servidor.</string>

	<!-- LogoutChecker -->
	<string name="logout_checker_title">Error en la sesión de usuario</string>
	<string name="logout_checker_message">la sesión con el servidor ha sido terminada, por favor vuelve a iniciar sesión.</string>
		
    <!-- Others -->
    <string name="null_content"></string>
    
</resources>
