<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="5dp"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
	<TextView
		android:text="@string/productinfo_ecologicalscore_title"
		android:textSize="18sp"
		android:textStyle="bold"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>

	<TextView
		android:text="@string/productinfo_ecologicalscore_subtitle"
		android:textSize="16sp"
		android:textColor="@color/productinfo_ecologicalscore_subtitle"
		android:layout_marginTop="5dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
	<TextView
		android:id="@+id/productinfo_ecologicalscore"
		android:background="@drawable/circlescale"
		android:text="@string/productinfo_ecologicalscore_defaultscore"
		android:textSize="50sp"
		android:textStyle="bold"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_width="130dp"
		android:layout_height="130dp"
		/>
  
    <LinearLayout 
        android:layout_marginTop="20dp"
        android:orientation="vertical"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
        >
    	<TextView
    		android:text="@string/productinfo_ecologicalscore_criterions_title"
			android:textSize="16sp"
			android:textStyle="bold"
			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		/>
    	
		<LinearLayout 
        	android:layout_marginTop="5dp"
        	android:paddingLeft="15dp"
			android:layout_width="match_parent"
    		android:layout_height="wrap_content"
        	>
			<ImageView
				android:id="@+id/productinfo_transport"				    
				android:src="@drawable/transport"
				android:scaleType="fitEnd"
				android:contentDescription="@string/null_content"
				android:layout_width="20dp"
				android:layout_height="20dp"
				/>
			<TextView
				android:text="@string/productinfo_ecologicalscore_transport"
				android:textSize="16sp"
				android:layout_marginLeft="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_marginTop="5dp"
			android:paddingLeft="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<ImageView
				android:id="@+id/productinfo_energy"	
				android:src="@drawable/energy"
				android:scaleType="fitEnd"
				android:contentDescription="@string/null_content"
				android:layout_width="20dp"
				android:layout_height="20dp"
				/>
			<TextView
				android:text="@string/productinfo_ecologicalscore_energy"
				android:textSize="16sp"
				android:layout_marginLeft="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_marginTop="5dp"
			android:paddingLeft="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<ImageView
				android:id="@+id/productinfo_water"	
				android:src="@drawable/water"
				android:scaleType="fitEnd"
				android:contentDescription="@string/null_content"
				android:layout_width="20dp"
				android:layout_height="20dp"
				/>
			<TextView
				android:text="@string/productinfo_ecologicalscore_water"
				android:textSize="16sp"
				android:layout_marginLeft="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_marginTop="5dp"
			android:paddingLeft="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<ImageView
				android:id="@+id/productinfo_society"	
				android:src="@drawable/society"
				android:scaleType="fitEnd"
				android:layout_width="20dp"
				android:layout_height="20dp"
				android:contentDescription="@string/null_content"
				/>
			<TextView
				android:text="@string/productinfo_ecologicalscore_society"
				android:textSize="16sp"
				android:layout_marginLeft="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_marginTop="5dp"
			android:paddingLeft="15dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
			<ImageView
				android:id="@+id/productinfo_recyclable"	
				android:src="@drawable/recyclable"
				android:scaleType="fitEnd"
				android:contentDescription="@string/null_content"
				android:layout_width="20dp"
				android:layout_height="20dp"
				/>
			<TextView
				android:text="@string/productinfo_ecologicalscore_recyclable"
				android:textSize="16sp"
				android:layout_marginLeft="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
