<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <!-- GroupView del logotipo y el titulo ECOAR de la parte superior-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_errortext"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/login_errorsdefault"
        android:textColor="#CC0000"
        android:visibility="invisible"
        />    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/login_user"
             />
        <EditText
            android:id="@+id/login_username"
		    android:layout_width="200dp"
    		android:layout_height="48dp"
    		android:textSize="14sp"
    		android:inputType="text"
    		/>
        <!-- android:hint="@string/email_hint"
    		android:inputType="textEmailAddress" -->
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/login_user"
             />
        <EditText
            android:id="@+id/login_password"
		    android:layout_width="200dp"
    		android:layout_height="48dp"
    		android:textSize="14sp"
    		android:inputType="textPassword"
    		/>
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        >
    	<Button
			android:layout_width="wrap_content"
			android:id="@+id/login_send"
    		android:layout_height="36dp"
    		android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
    		android:textSize="14sp"
	    	android:text="@string/login_send"
	    	android:scaleType="center"
	    	/>
	    <ProgressBar
		    android:id="@+id/login_progressbar"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center"
    		android:indeterminateBehavior="repeat"
    		android:indeterminateOnly="true"
    		android:visibility="invisible"
    		/>
    </FrameLayout>
    <TextView
        android:id="@+id/login_singuptext"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="14sp"
        android:text="@string/login_singuptext"
       	android:linksClickable="true"
        />
   	<TextView
   	    android:id="@+id/login_recoverpasstext"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="14sp"
        android:text="@string/login_recoverpasstext"
       	android:linksClickable="true"
        />

</LinearLayout>