<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView
		android:id="@+id/productinfo_productqualification"
		android:text="@string/productinfo_userrating_title"
		android:textSize="18sp"
		android:textStyle="bold"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>

	<LinearLayout
    	android:layout_marginTop="5dp"
    	android:paddingLeft="15dp"
    	android:orientation="horizontal" 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	>

		<RelativeLayout
			android:layout_width="48dp"
			android:layout_height="48dp"
			>
			<RelativeLayout
				android:background="@drawable/productinfo_userating_circlescale"
				android:layout_centerHorizontal="true"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				>
				<TextView
					android:id="@+id/productinfo_userrating"
					android:text="@string/productinfo_userrating_rating"
					android:textSize="16sp"
					android:textStyle="bold"
					android:textColor="#FFF"
					android:layout_centerInParent="true"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/>
			</RelativeLayout>
		</RelativeLayout>
    
		<LinearLayout
    		android:layout_marginLeft="10dp"
    		android:orientation="vertical" 
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
		    >
    		<LinearLayout
    			android:orientation="horizontal" 
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			>
    			<TextView
        			android:text="@string/productinfo_userrating_titleuser" 
					android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
        			/>
    		</LinearLayout>

			<LinearLayout
	    		android:layout_marginTop="5dp"
    			android:orientation="horizontal" 
    			android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			>
    			<RatingBar
					android:id="@+id/productinfo_ratingbar"
					style="?android:attr/ratingBarStyleSmall"
					android:numStars="5"
					android:isIndicator="false" 
					android:layout_marginRight="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/>
    			<TextView
    			    android:id="@+id/productinfo_ratingbartext"
        			android:text="@string/productinfo_userrating_ratinguser" 
        			android:textStyle="bold"
					android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
        			/>
     		</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>