<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/someproducts_item"
	android:padding="5dp"    
	android:layout_width="match_parent"
	android:layout_height="72dp"
    >
    <LinearLayout
    	android:orientation="horizontal"
    	android:gravity="center_vertical"
    	android:layout_toLeftOf="@+id/searchbar_item_menu"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
        >
        <ImageView 
    		android:id="@+id/searchbar_item_image"
    		android:src="@drawable/ic_launcher"
    		android:contentDescription="@string/null_content"
			android:layout_width="52dp"
    		android:layout_height="52dp"
            />
        <LinearLayout
    		android:orientation="vertical"
    		android:gravity="center_vertical"
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
        	>
	    	<TextView
	        	android:id="@+id/searchbar_item_name"
	        	android:text="@string/searchbar_results_item_name"
	        	android:textSize="18sp"
	        	android:textStyle="bold"
	        	android:layout_marginLeft="10dp"
	        	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
	        	/>
			<TextView
	        	android:id="@+id/searchbar_item_description"
	        	android:text="@string/searchbar_results_item_description"
	        	android:textSize="14sp"
	        	android:textColor="@color/searchbar_item_description"
	        	android:layout_marginLeft="10dp"
	        	android:layout_width="match_parent"
    			android:layout_height="wrap_content"
	        	/>
	    </LinearLayout>
    </LinearLayout>
	<Button
		android:id="@+id/searchbar_item_menu"
		android:background="@drawable/displaymenu"
		android:layout_alignParentRight="true"
		android:layout_alignParentBottom="true" 
		android:layout_marginRight="0dp"
		android:layout_marginLeft="5dp"
		android:layout_width="20dp"
		android:layout_height="20dp" 
		/>
</RelativeLayout>